semaphore/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  labels:
    app: semaphore
spec:
  ports:
    - port: 3000
  selector:
    app: semaphore
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  labels:
    app: semaphore
spec:
  selector:
    matchLabels:
      app: semaphore
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      restartPolicy: Always
      containers:
      - image: semaphoreui/semaphore:latest
        name: semaphore
        ports:
        - containerPort: 3000
          name: semaphore
        volumeMounts:
        - name: semaphore-conf
          mountPath: /etc/semaphore
        - name: semaphore-volume
          mountPath: /var/lib/semaphore
      volumes:
      - name: semaphore-conf
        configMap:
          name: semaphore-config
          items:
            - key: config.json
              path: config.json
      - name: semaphore-volume
        persistentVolumeClaim:
          claimName: semaphore-pvc
