semaphore/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore
  namespace: default
spec:
  rules:
  - host: semaphore.aslth.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ansible
            port:
              number: 3000
